[package]
name = "reverse-proxy"
version = "0.0.4"
edition = "2021"
description = "A high-performance HTTP reverse proxy server"
authors = ["Zerounary <gmail_ilak@163.com>"]
license = "MIT"
keywords = ["server", "axum", "reverse",  "proxy"]
repository = "https://github.com/Zerounary/reverse-proxy.git"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5.15", features = ["headers", "ws"]}
axum-server = { version = "0.3", features = ["tls-rustls"] }
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5.0"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.15"
tungstenite = "0.15"
futures-util = "0.3"

serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
serde_yaml = "0.9.13"
validator = { version = "0.15", features = ["derive"] }

jsonpath-rust = "0.1.6"
convert_case = "0.6.0"
clap = {version = "3", features = ["derive"]}
ansi_term = "0.12.1"

pest = "2.0"
pest_derive = "2.0"

sha1 = "0.10.6"
base64 = "0.22.1"